--- a/package.json
+++ b/package.json
@@ -1,17 +1,31 @@
 {
   "name": "frontmatter",
+  "version": "1.0.0",
   "description": "very simple frontmatter parsing",
   "scripts": {
-    "test": "jest"
+    "build": "webpack -p",
+    "dry": "npm publish . --dry-run",
+    "test": "jest",
+    "preversion": "npm run test",
+    "version": "npm run build && git add dist/",
+    "postversion": "git push && git push --tags"
   },
+  "main": "dist/frontmatter.min.js",
+  "files": [
+    "dist/frontmatter.min.js"
+  ],
   "author": "worc <curtis.s.mcallister@gmail.com>",
+  "homepage": "https://github.com/worc/frontmatter",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "babel-jest": "^24.9.0",
+    "babel-loader": "^8.0.6",
     "eslint": "^6.8.0",
     "eslint-plugin-jest": "^23.6.0",
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
   }
 }
