change the package name to frontmatter-js
frontmatter and front-matter were already taken... so...

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontmatter",
+  "name": "frontmatter-js",
   "version": "1.0.0",
   "description": "a very simple frontmatter parser",
   "scripts": {
